# ha-ps5

./: .gitignore  .pre-commit-config.yaml  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  hassfest.yml  release-psn-ddp.yml  release-pyps5.yml
custom_components/ps5/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  media_player.py  regist.py  strings.json
custom_components/psn/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  media_player.py
custom_components/psn/translations/: en.json
psn-ddp/: README.md  debug_ddp.py  get_credential.py  get_credential_pin.py  get_ddp_credential.py  pyproject.toml  regist_ps5.py  test_live.py  test_wakeup_registered.py
psn-ddp/src/psn_ddp/: __init__.py  const.py  protocol.py
psn-ddp/tests/: test_async.py  test_protocol.py
pyps5/: README.md  pyproject.toml
pyps5/pyps5/: __init__.py  auth.py  can.py  ddp.py  ps5.py
tests/: conftest.py
tests/ps5/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_media_player.py  test_regist.py
tests/psn/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_media_player.py
