[project]
name = "ha-ps5"
version = "0.1.0"
requires-python = ">=3.14.2"

[tool.uv]
package = false

[tool.uv.sources]
psn-ddp = { path = "psn-ddp" }
pyps5 = { path = "pyps5" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-homeassistant-custom-component==0.13.319",
    "psn-ddp",
    "pyps5",
    "cryptography>=41.0",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["custom_components/ps5", "custom_components/psn"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.14"
strict = true
implicit_reexport = true
ignore_missing_imports = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
fail_under = 95
