[project]
name = "ha-ps5"
version = "0.1.0"
requires-python = ">=3.14.2"

[tool.uv]
package = false

[tool.uv.sources]
psn-ddp = { path = "psn-ddp" }
pyps5 = { path = "pyps5" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "pytest-homeassistant-custom-component==0.13.319",
    "psn-ddp",
    "pyps5",
    "cryptography>=41.0",
    "mypy>=1.19.1",
    "ruff>=0.15.7",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["custom_components/ps5", "custom_components/psn"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "S",        # flake8-bandit (security)
    "RUF",      # ruff-specific
]
ignore = [
    "S101",     # assert statements (used in tests and type narrowing)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]  # security/bugbear rules too strict for test helpers
# Standalone debug/example scripts — not production code
"psn-ddp/debug_ddp.py" = ["S", "E501"]
"psn-ddp/get_credential.py" = ["S", "E501"]
"psn-ddp/get_credential_pin.py" = ["S", "E501"]
"psn-ddp/get_ddp_credential.py" = ["S", "E501"]
"psn-ddp/regist_ps5.py" = ["S", "E501", "RUF"]
"psn-ddp/tests/**" = ["S", "E501"]

[tool.mypy]
python_version = "3.14"
strict = true
implicit_reexport = true
ignore_missing_imports = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
fail_under = 95
