[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psn-ddp"
version = "0.1.0"
description = "Async Python library for the PlayStation Device Discovery Protocol (DDP) — PS4 and PS5"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []  # stdlib only: asyncio, socket, logging, dataclasses

[project.urls]
Homepage = "https://github.com/lorek/ha-ps5"

[tool.hatch.build.targets.wheel]
packages = ["src/psn_ddp"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
