[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyps5"
version = "0.1.0"
description = "Python library for PS5 console control (Cloud Assisted Navigation API)"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/lorek/pyps5"

[tool.hatch.build.targets.wheel]
packages = ["pyps5"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "aiohttp>=3.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
